chore(config): externalize backend secrets and CORS origins to env variables